# teamtracks

./: .dockerignore  .env.example  .gitignore  NEXT.md  README.md  compose.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/app/: __init__.py  config.py  domain.py  main.py  worker.py
backend/app/api/: auth.py  conversion_jobs.py  manifest.py  media.py  organizations.py  public.py  sessions.py  settings.py  songs.py  stems.py  transposition.py
backend/app/db/: session.py
backend/app/db/migrations/: env.py
backend/app/db/migrations/versions/: 0001_create_mvp_tables.py  0002_admin_settings_and_job_snapshots.py  0003_song_keys_and_key_assets.py  0004_organizations_and_sessions.py
backend/app/models/: __init__.py  app_settings.py  browser_session.py  conversion_job.py  organization.py  song.py  song_key.py  stem.py  stem_key_asset.py
backend/app/schemas/: conversion_job.py  manifest.py  organization.py  session.py  settings.py  song.py  stem.py  transposition.py
backend/app/services/: auth.py  conversion.py  invites.py  login_rate_limit.py  manifest.py  passwords.py  probing.py  settings.py  storage.py
backend/tests/: conftest.py  test_admin_features.py  test_conversion.py  test_manifest_media.py  test_organization_auth.py  test_organization_management.py  test_organization_models.py  test_organization_scope.py  test_probing.py  test_security_review.py  test_songs_api.py  test_stems_api.py
frontend/: Dockerfile.development  Dockerfile.production  index.html  nginx.conf  package-lock.json  package.json  tsconfig.json  vite.config.ts
(+64 files in other folders)
