[build-system]
requires = ["setuptools>=82.0.1,<83"]
build-backend = "setuptools.build_meta"

[project]
name = "teamtracks-backend"
version = "0.1.0"
description = "TeamTracks backend"
requires-python = ">=3.14"
dependencies = [
  "alembic>=1.18.4,<2",
  "fastapi>=0.137.0,<1",
  "pydantic-settings>=2.14.1,<3",
  "python-multipart>=0.0.32,<1",
  "sqlalchemy>=2.0.50,<3",
  "uvicorn[standard]>=0.49.0,<1",
]

[project.optional-dependencies]
dev = [
  "httpx2>=2.4.0,<3",
  "pytest>=9.1.0,<10",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
